# Vendroid

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-test-debug.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
appium-tests/: .gitignore  README.md  conftest.py  package-lock.json  package.json  pyproject.toml
appium-tests/etchdroid/: fixtures.py  qemu.py
appium-tests/scripts/: prepare-vm.sh  run-vm.sh  wait-vm-startup.sh
appium-tests/tests/: test_generic.py  test_qemu.py  test_vendroid_smoke.py
appium-tests/vendroid/: __init__.py  actions.py  config.py  utils.py
fastlane/metadata/android/ar/: full_description.txt  title.txt
fastlane/metadata/android/az-AZ/: full_description.txt  title.txt
fastlane/metadata/android/cs-CZ/: full_description.txt  title.txt
fastlane/metadata/android/de-DE/: full_description.txt  title.txt
fastlane/metadata/android/en-US/: full_description.txt  title.txt
fastlane/metadata/android/es-ES/: full_description.txt  title.txt
fastlane/metadata/android/fa-IR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fi-FI/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fr-FR/: full_description.txt  title.txt
fastlane/metadata/android/gl-ES/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/hu-HU/: full_description.txt  (+1 more)
gradle/: libs.versions.toml
misc/: mock-google-services.json
(+290 files in other folders)
